[package]
name = "vector-http-sink-hbase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
axum = "0.4.2"
clap = { version = "3.0.0-rc.7", features = ["derive"] }
hbase-thrift = { git = "https://github.com/midnightexigent/hbase-thrift-rs" }
serde_json = { version = "1.0.73", features = ["raw_value"] }
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.2.0", features = ["trace"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[features]
