[package]
name = "vector-http-sink-hbase"
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
axum = "0.4.3"
bb8 = "0.7.1"
clap = { version = "3.0.0-rc.11", features = ["derive"] }
hbase-thrift = { version = "1.1.0", features = ["bb8"] }
serde_json = { version = "1.0.73", features = ["raw_value"] }
thrift = "0.15.0"
thrift-pool = "1.4.0"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.2.0", features = ["trace"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }

[features]
